--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         cache: 'npm'
-    - run: npm install
+#     - run: npm install
           
     # Runs special workflow steps for pull requests
     - name: Black Duck Workflow for Pull Request
@@ -33,7 +33,7 @@ jobs:
         comment_on_pr: true
         upgrade_major: true
         trustcert: true
-        debug: 9
+        debug: 0
         mode: rapid
         sarif: blackduck-sarif.json
       env:
@@ -51,7 +51,7 @@ jobs:
         comment_on_pr: false
         upgrade_major: true
         trustcert: true
-        debug: 9
+        debug: 0
         mode: rapid
         sarif: blackduck-sarif.json
       env:
